--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ html {
     --text:#ddd;
     --bg:#222;
 
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Moonet", Arial, Helvetica, sans-serif;
     font-size: 14pt;
     line-height: 1.45;
     color:var(--text);
