--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,24 @@
+@font-face {
+    font-family: "Moonet";
+    src: url("./fonts/MoonetdemoRegular-6RnxY.otf") format("opentype");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Sarala";
+    src: url("./fonts/Sarala-Regular.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Sarala";
+    src: url("./fonts/Sarala-Bold.ttf") format("truetype");
+    font-weight: bold;
+    font-style: normal;
+}
+
 * {
     padding: 0px;
     margin: 0px;
@@ -8,9 +29,9 @@ html {
     --text:#ddd;
     --bg:#222;
 
-    font-family: "Moonet", Arial, Helvetica, sans-serif;
-    font-size: 14pt;
-    line-height: 1.45;
+    font-family: Sarala, Arial, Helvetica, sans-serif;
+    font-size: 20pt;
+    line-height: 0.9;
     color:var(--text);
     background:var(--bg);
     hyphens:auto;
@@ -39,6 +60,10 @@ nav {
     text-align: center;
 }
 
+h1 {
+    font-family: Moonet;
+}
+
 section#navigation {
     grid-area: navs;
 }
@@ -49,4 +74,8 @@ section#information {
 
 main {
     grid-area: main;
+}
+
+button {
+    font-family: Sarala;
 }
