--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ section#navigation #nav-entries {
   display: flex;
   flex-direction: column;
   width: 80%;
-  gap: 8px;
+  gap: 4px
 }
 
 section#navigation .nav-entry {
@@ -98,11 +98,12 @@ section#navigation .nav-entry {
   font-size: 16px;
   justify-content: center;
   align-items: center;
-  border-radius: 20px;
-  padding: 8px;
+  border-radius: 8px;
+  padding: 4px 10px;
   width: 100%;
   border: 1px solid black; 
 }
+
 section#navigation .nav-entry button {
   width: 100%;
   height: 100%;
@@ -115,12 +116,7 @@ section#navigation .nav-entry button {
   cursor: pointer;
 }
 
-/* Optional: Add hover/focus effects */
-section#navigation .nav-entry button:hover {
-  background: rgba(0,0,0,0.1);
-}
-
-section#navigation #current-steps input {
+section#navigation .nav-entry input {
   background: transparent; 
   border: none; 
   outline: none; 
@@ -130,7 +126,6 @@ section#navigation #current-steps input {
 section#navigation #current-steps button {
   background: transparent; 
   border: 1px solid black; 
-  content
   height: 32px;
   width: 32px;
   border-radius: 100%;
@@ -151,8 +146,8 @@ section#navigation #current-steps:hover button {
 
 
 
-section#navigation .setting-container {
-  font-size: 16px;
+section#navigation .setting-container p {
+  font-size: 12px;
 }
 
 section#navigation .setting-container .slider {
