--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ html {
 
   font-family: Sarala, Arial, Helvetica, sans-serif;
   font-size: 20pt;
-  line-height: 0.9;
+  line-height: 1.3;
   color: var(--text);
   background: var(--bg);
   hyphens: auto;
@@ -45,28 +45,41 @@ body {
 
 div.pop-up {
   position: absolute;
-  top:8px;
+  top: 8px;
   z-index: 9999;
 }
 
-div.pop-up p {
+div.pop-up *:not(img.pop-up-icon) {
   display: none;
 }
 
-div.pop-up:hover p {
-  display:block;
+div.pop-up:hover *:not(img.pop-up-icon) {
+  display: block;
 }
 
 div.pop-up#information {
-  right:8px;
+  right: 8px;
   text-align: right;
 }
 
-div.icon {
-  border:1px solid var(--text);
-  background-color: var(--bg);
+div.pop-up#settings {
+  left: 8px;
+  text-align: left;
+}
+
+img.pop-up-icon {
+  background-color: var(--text);
   border-radius: 8px;
-  width:1.1rem;
-  height: 1.1rem;
+  width: 1.2rem;
+  height: 1.2rem;
+  padding:4px;
   text-align: center;
+}
+
+input, label {
+  display: inline;
+}
+
+label {
+  font-size: 0.8rem;
 }
