--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ html {
   --bg: #222;
 
   font-family: Sarala, Arial, Helvetica, sans-serif;
-  font-size: 20pt;
+  font-size: 14pt;
   line-height: 1.3;
   color: var(--text);
   background: var(--bg);
@@ -45,37 +45,33 @@ body {
 
 div.pop-up {
   position: absolute;
-  top: 8px;
+  top: 16px;
   z-index: 9999;
 }
 
-div.pop-up *:not(img.pop-up-icon) {
+div.pop-up:not(:hover) *:not(img.pop-up-icon) {
   display: none;
 }
 
-div.pop-up:hover *:not(img.pop-up-icon) {
-  display: block;
-}
-
 div.pop-up#information {
-  right: 8px;
+  right: 16px;
   text-align: right;
 }
 
 div.pop-up#settings {
-  left: 8px;
+  left: 16px;
   text-align: left;
 }
 
 img.pop-up-icon {
   background-color: var(--text);
   border-radius: 8px;
-  width: 1.2rem;
-  height: 1.2rem;
-  padding:4px;
+  width: 2rem;
+  height: 2rem;
+  padding: 4px;
   text-align: center;
 }
 
-label {
-  font-size: 0.8rem;
+fieldset {
+  padding: 8px;
 }
